--- a/package.json
+++ b/package.json
@@ -93,9 +93,8 @@
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vitest": "^0.7.4",
-    "vsce": "^2.7.0"
-  },
-  "dependencies": {
+    "vsce": "^2.7.0",
     "dayjs": "^1.11.11"
-  }
+  },
+  "dependencies": {}
 }
