--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "typecheck": "tsc --noEmit",
     "release": "bumpp --commit --push --tag && nr publish"
   },
+  "dependencies": {},
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
     "@antfu/ni": "^0.13.2",
@@ -85,6 +86,7 @@
     "@types/node": "^17.0.21",
     "@types/vscode": "^1.65.0",
     "bumpp": "^7.1.1",
+    "dayjs": "^1.11.11",
     "eslint": "^8.11.0",
     "esno": "^0.14.1",
     "pnpm": "^6.32.3",
@@ -93,8 +95,6 @@
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vitest": "^0.7.4",
-    "vsce": "^2.7.0",
-    "dayjs": "^1.11.11"
-  },
-  "dependencies": {}
+    "vsce": "^2.7.0"
+  }
 }
